# ziplock

./: .dockerignore  .gitignore  ANDROID_BUILDER_DEPLOYMENT.md  CHANGELOG.md  Cargo.toml  Checking  LICENSE.md  README.md  Running  WINDOWS_PRODUCTION_LOGGING.md  test_build.rs
.cargo/: config.toml
.github/docker/: android-builder.Dockerfile  arch-builder.Dockerfile  ubuntu-builder.Dockerfile
.github/workflows/: android.yml  container-images.yml  linux-build.yml  unified-release.yml
apps/desktop/: Cargo.toml  build.rs
apps/desktop/resources/windows/: ziplock.manifest  ziplock.rc
apps/desktop/src/: main.rs
apps/desktop/src/examples/: mod.rs
apps/desktop/src/logging/: mod.rs  windows_event_log.rs
apps/desktop/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
apps/desktop/src/services/: clipboard.rs
apps/desktop/src/ui/: mod.rs
apps/desktop/src/ui/components/: button.rs  mod.rs  totp_field.rs
apps/desktop/src/ui/views/: add_credential.rs  main.rs  open_repository.rs
apps/linux/: Cargo.toml
apps/linux/src/: config.rs  main.rs
apps/linux/src/examples/: adaptive_integration.rs
apps/linux/src/logging/: mod.rs
apps/linux/src/platform/: file_operations.rs  mod.rs
apps/linux/src/services/: clipboard.rs  credential_store.rs  mod.rs  repository_service.rs  update_checker.rs
apps/linux/src/ui/: README.md  mod.rs  theme.rs
apps/linux/src/ui/components/: button.rs  credential_form.rs  mod.rs  toast.rs  totp_field.rs  update_dialog.rs
apps/linux/src/ui/views/: add_credential.rs  edit_credential.rs  main.rs  mod.rs  open_repository.rs  settings.rs  wizard.rs
apps/mobile/android/app/src/main/cpp/: CMakeLists.txt  ziplock_hybrid_jni.cpp
assets/: README.md
backend/: Cargo.toml
backend/examples/: credential_save_test.rs  simple_credential_test.rs
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/api/: mod.rs
backend/src/ipc/: mod.rs
backend/src/storage/: file_lock.rs  mod.rs  validation.rs
config/: backend.sample.toml  backend.sample.yml  config.yml  frontend.sample.yml  logging.yaml
docs/: 01-initial-prompt.txt  02-specification.md  TODO.md  architecture.md  build.md  design.md  repository-detection-implementation.md  technical.md
docs/technical/: CommonTemplates-FFI-Integration.md  advanced-features.md  android-archive-creation-debugging.md  android-create-archive-developer-guide.md  android-create-archive-wizard.md  android-hybrid-migration.md  android.md  build-linux.md  build.md  cloud-storage-implementation.md  configuration.md  cross-platform-adaptation-plan.md  ffi-integration.md  file-association.md  iced-migration.md  implementation-status.md  ipc-client-examples.md  linux-desktop-integration.md  linux-file-association.md  mobile-integration.md  mobile-shared-implementation.md  persistent-archive-path-implementation.md  repository-detection-implementation.md  unified-architecture.md  validation-implementation.md
examples/: README.md  config.example.yml  simple_client.rs
examples/mobile-ffi/: android-example.kt  ios-example.swift
frontend/linux/: Cargo.toml
frontend/linux/resources/: ziplock.desktop
frontend/linux/src/: config.rs  ipc.rs  main.rs
frontend/linux/src/ui/: mod.rs  theme.rs
frontend/linux/src/ui/components/: button.rs  credential_form.rs  mod.rs  toast.rs  totp_field.rs
frontend/linux/src/ui/views/: add_credential.rs  edit_credential.rs  main.rs  mod.rs  open_repository.rs  wizard.rs
packaging/arch/: PKGBUILD  ziplock.install
packaging/linux/: ziplock-backend.service
packaging/windows/: README.md
scripts/: README.md  build-linux.sh  build-mobile.sh  dev-run-linux.sh  package-deb.sh  run-integration-tests.sh  run-tests-with-existing-backend.sh  test-backend-connection.sh  test-build-locally.sh  test-build.sh
scripts/deploy/: manage-service.sh  package-for-deployment.sh  setup-logging.sh
scripts/dev/: android-quick-test-build.sh  demo-config.yml  demo-validation.sh  pre-push.sh  run-backend-tests.sh  run-ci-checks.sh  run-clippy.bat  run-clippy.sh  run-desktop.bat  run-desktop.sh  run-format.sh  run-integration-tests.sh  run-linux.sh  run-tests-with-existing-backend.sh  test-android-lint.sh  test-in-container.sh  test-logging.sh  test-temp-archive-ffi.java  test-validation-errors.sh  validate-android-xml.sh  verify-android-library.sh  verify-android-lifecycle.sh  verify-android-setup.sh  verify-arch-file-association.sh  verify-file-association.sh  verify-linux-file-association.sh
scripts/migrations/: migrate-config-from-toml-to-yaml.sh
scripts/test/: README-shell-escaping-fix.md  debug-windows-archive.bat  debug-windows-archive.ps1  debug-windows-archive.py  run-archive-creation-tests.sh  test-arch-packaging-local.sh  test-archive-manager.sh  test-credential-save-fix.sh  test-ffi-basic.sh  test-printf-approach.sh  test-shell-escaping.sh  test-windows-archive-persistence.sh  validate-windows-fix.sh
scripts/version/: update-version.sh  (+1 more)
shared/: Cargo.toml  temp_test.rs
shared/.cargo/: config.toml
shared/include/: ziplock.h  ziplock_hybrid.h
shared/src/: debug_test.rs  ffi.rs  ffi_hybrid.rs  ffi_hybrid_integration_test.rs  ffi_hybrid_test.rs  lib.rs  logging.rs  memory_repository.rs  update_checker.rs  validation.rs
shared/src/api/: handlers.rs  mod.rs
shared/src/archive/: android_saf.rs  cloud_storage.rs  file_lock.rs  manager.rs  mod.rs  validation.rs
shared/src/client/: hybrid.rs  mod.rs
shared/src/config/: app_config.rs  mod.rs  paths.rs  repository.rs  repository_config.rs
shared/src/core/: errors.rs  file_provider.rs  memory_repository.rs  mod.rs  plugins.rs  repository_manager.rs  types.rs
shared/src/ffi/: common.rs  desktop.rs  mobile.rs  mod.rs
shared/src/logging/: logger.rs  mobile_writer.rs  mod.rs
shared/src/models/: credential.rs  field.rs  mod.rs  template.rs
shared/src/platform/: android.rs  mod.rs
shared/src/utils/: backup.rs  encryption.rs  mod.rs  password.rs  search.rs  totp.rs  validation.rs  yaml.rs
shared/src/yaml/: mod.rs
shared/tests/: README.md  archive_persistence_test.rs  memory_archive_test.rs
tests/: README.md
(+112 files in other folders)
