[package]
name = "ziplock-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared library for ZipLock password manager - contains common data models and utilities"
keywords.workspace = true
categories.workspace = true

[lib]
name = "ziplock_shared"
path = "src/lib.rs"
crate-type = [
    "rlib",
] # Only build as Rust library for cross-compilation compatibility

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Config management dependencies
dirs = "5.0"
toml = "0.8"
tracing = "0.1"

# Additional shared library dependencies
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
regex = "1.10"
base64 = "0.21"
sha2 = "0.10"
rand = "0.8"

# C FFI dependencies
libc = "0.2"

# TOTP support
totp-lite = "2.0"

# Optional dependencies for different serialization formats
bincode = { version = "1.3", optional = true }
rmp-serde = { version = "1.1", optional = true }

[dev-dependencies]
tempfile = "3.8"
assert_matches = "1.5"

[features]
default = ["yaml"]
# Serialization format support
yaml = []
bincode = ["dep:bincode"]
messagepack = ["dep:rmp-serde"]

# Additional validation features
strict-validation = []

# C FFI support
c-api = []
