[package]
name = "ziplock-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared library for ZipLock password manager - contains common data models and utilities"
keywords.workspace = true
categories.workspace = true

[lib]
name = "ziplock_shared"
path = "src/lib.rs"
crate-type = [
    "rlib",
    "cdylib", # For FFI support
] # Build as both Rust library and C-compatible dynamic library

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

# Random number generation for passwords and IDs
rand.workspace = true

# Archive handling
sevenz-rust2.workspace = true

# Config management dependencies
dirs = "5.0"
toml = "0.8"

# Additional shared library dependencies
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
regex = "1.10"
base64 = "0.21"
sha2 = "0.10"

# Core backend functionality dependencies
bytes = "1.5"
tempfile = "3.8"
file-lock = "2.1"
serde_json = "1.0"
num_cpus.workspace = true

# C FFI dependencies
libc = "0.2"

# TOTP support
hmac = "0.12"
sha1 = "0.10"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = "0.27"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

# Optional dependencies for different serialization formats
bincode = { version = "1.3", optional = true }
rmp-serde = { version = "1.1", optional = true }

[dev-dependencies]
tempfile = "3.8"
assert_matches = "1.5"

[features]
default = ["yaml"]
# Serialization format support
yaml = []
bincode = ["dep:bincode"]
messagepack = ["dep:rmp-serde"]

# Additional validation features
strict-validation = []

# C FFI support
c-api = []

# Client library support (for FFI clients)
client = []

# Core library features
core = []
archive-manager = []
crypto = []
