[package]
name = "ziplock-linux"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Linux application for ZipLock password manager"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "ziplock"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
ziplock-shared = { path = "../../shared" }
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono = "0.4"


# GUI framework - using iced as primary choice
iced = { workspace = true, features = [
    "tokio",
    "image",
    "svg",
    "canvas",
    "debug",
    "lazy",
    "advanced",
] }

# Alternative GUI framework option
gtk = { version = "0.9", package = "gtk4", optional = true, features = [
    "v4_6",
] }
gdk4 = { version = "0.9", optional = true }
glib = { version = "0.21", optional = true }

# Additional application dependencies
uuid.workspace = true
dirs = "5.0"
config = "0.14"
toml = "0.8"
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
image = "0.24"
rfd = { version = "0.15", optional = true }       # File dialog
arboard = "3.4"
keyring = "3.6"
open = "5.0"

# Logging dependencies
tracing-appender = "0.2" # For file rotation and advanced logging
is-terminal = "0.4"      # For terminal detection (colored output)
serde_yaml = "0.9"       # For YAML configuration file support

# Linux-specific dependencies
nix = "0.27"
freedesktop-desktop-entry = "0.5"

# Icon and asset loading
resvg = "0.37"

[dev-dependencies]
tempfile = "3.8"
assert_matches = "1.5"

[features]
default = ["iced-gui", "wayland-support", "file-dialog"]

# GUI framework selection
iced-gui = []
gtk-gui = ["gtk", "gdk4", "glib"]

# Platform support
wayland-support = []
x11-support = []

# File operations
file-dialog = ["rfd"]

# Development features
debug-ui = []
mock-backend = []

[package.metadata.deb]
maintainer = "James Angus <james@ejangi.com>"
copyright = "2024, James Angus <james@ejangi.com>"
license-file = ["../../LICENSE", "4"]
extended-description = """\
A secure, portable password manager using encrypted 7z archives.
ZipLock provides a clean, modern interface for managing your passwords
with strong encryption and cross-platform compatibility."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    [
        "target/release/ziplock",
        "usr/bin/",
        "755",
    ],
    [
        "resources/icons/ziplock.svg",
        "usr/share/icons/hicolor/scalable/apps/",
        "644",
    ],
    [
        "resources/ziplock.desktop",
        "usr/share/applications/",
        "644",
    ],
]
